--- a/styles/style.css
+++ b/styles/style.css
@@ -49,11 +49,11 @@ h6 {
 }
 
 /* 8. Improve line wrapping */
-p {
-    text-wrap: pretty;
+/* p {
+    /* text-wrap: pretty; */
 }
 
-h1,
+*/ h1,
 h2,
 h3,
 h4,
@@ -70,14 +70,61 @@ h6 {
     isolation: isolate;
 }
 
-.main-div {
+a {
+    text-decoration: none;
+    color: #F9B234;
+    position: relative;
+    /* Necessary for absolute positioning of the underline */
+}
+
+a:hover::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #e9a530;
+    animation: underline-animation 0.25s ease-in-out;
+}
+
+@keyframes underline-animation {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+.outer-div {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100%;
-    padding: 8rem 16rem 0 16rem;
+    height: 100vh;
+    padding: 1.5rem 0.5rem 0 0.5rem;
     gap: 2rem;
-    /* border: 3px solid black; */
+    /* border: 5px solid red; */
+}
+
+.main-div {
+    width: 80%;
+    padding: 0 1rem 0 1rem;
+    margin: 0 auto 0 auto;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.main-div>* {
+    margin: 0.5rem 0 0.5rem 0;
+}
+
+.description {
+    font-size: 1rem;
+    line-height: 1.3;
+    text-align: justify;
+    max-width: 90%;
 }
 
 
@@ -91,7 +138,7 @@ h6 {
     font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
-    /* margin-top: 8px; */
+    margin: 0.1rem 0 0.5rem 0;
 }
 
 .slot-machine .text-1,
@@ -116,6 +163,7 @@ h6 {
 }
 
 .slot-machine .text-2 {
+    text-align: left;
     transform: translateY(100%);
 }
 
@@ -123,6 +171,12 @@ h6 {
 
 
 /* Video Stuff */
+.video-list {
+    padding: 1rem 0 1rem 0;
+    justify-content: left;
+
+}
+
 .video-container {
     display: flex;
     border-radius: 7px;
@@ -138,6 +192,22 @@ h6 {
 }
 
 /* project stuff */
+.project-list {
+    padding: 1rem 0 1rem 0;
+    justify-content: left;
+    gap: 0.5rem;
+}
+
+.project-container ul {
+    list-style-type: square;
+    padding: 0;
+    margin-top: 0.5rem;
+}
+
+.project-container li {
+    margin: 0.5rem 0 0 1.5rem;
+}
+
 
 /* footer stuff */
 .footer-container {
@@ -145,7 +215,20 @@ h6 {
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    padding: 1rem;
+    padding: 1.5rem auto 0 auto;
     margin-top: 4rem;
+
     /* border-top: 1px solid #e9ecef; */
 }
+
+/* @media screen and (max-width: 768px) {
+    .outer-div {
+        padding: 0.5rem 0.25rem 0 0.25rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .outer-div {
+        padding: 0.25rem 0.12rem 0 0.12rem;
+    }
+} */
