--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ h6 {
 /* 8. Improve line wrapping */
 /* p {
     /* text-wrap: pretty; */
-}
+
 
 */ h1,
 h2,
@@ -72,7 +72,7 @@ h6 {
 
 a {
     text-decoration: none;
-    color: #F9B234;
+    color: #FF9900;
     position: relative;
     /* Necessary for absolute positioning of the underline */
 }
@@ -84,7 +84,7 @@ a:hover::after {
     left: 0;
     width: 100%;
     height: 1px;
-    background-color: #e9a530;
+    background-color: #e38902;
     animation: underline-animation 0.25s ease-in-out;
 }
 
@@ -101,18 +101,19 @@ a:hover::after {
 .outer-div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 100vh;
-    padding: 1.5rem 0.5rem 0 0.5rem;
+    min-height: 100vh;
+    padding: 3rem 0.75rem;
     gap: 2rem;
     /* border: 5px solid red; */
 }
 
 .main-div {
-    width: 80%;
-    padding: 0 1rem 0 1rem;
-    margin: 0 auto 0 auto;
-    justify-content: space-between;
+    width: 90%;
+    max-width: 1024px;
+    padding: 0 1rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 
@@ -178,17 +179,18 @@ a:hover::after {
 }
 
 .video-container {
-    display: flex;
-    border-radius: 7px;
-    overflow: hidden;
-    margin: 0.5rem;
-    gap: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 1rem;
+    width: 100%;
+    margin-top: 1rem;
 }
 
 .embedded-video {
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16/9;
+    border-radius: 8px;
 }
 
 /* project stuff */
@@ -215,20 +217,46 @@ a:hover::after {
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    padding: 1.5rem auto 0 auto;
-    margin-top: 4rem;
-
+    padding: 4rem auto 0 auto;
+    margin-top: 6rem;
+    color: lightgray;
     /* border-top: 1px solid #e9ecef; */
 }
 
-/* @media screen and (max-width: 768px) {
-    .outer-div {
-        padding: 0.5rem 0.25rem 0 0.25rem;
+.footer-container a {
+    color: lightgray;
+
+}
+
+..footer-container a:hover {
+    color: #FF9900;
+}
+
+.made-with {
+    color: transparent;
+    text-shadow: 0 0 0 lightgray;
+}
+
+
+@media screen and (max-width: 768px) {
+    .main-div {
+        width: 95%;
+        padding: 0.25rem 0.5rem;
+    }
+
+    .description {
+        max-width: 100%;
     }
 }
 
 @media screen and (max-width: 480px) {
     .outer-div {
-        padding: 0.25rem 0.12rem 0 0.12rem;
+        padding: 1rem 0.25rem;
+        gap: 1rem;
     }
-} */
+
+    .video-container {
+        grid-template-columns: 1fr;
+        /* Force single column on very small screens */
+    }
+}
